--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>com.cerema.gopro</title>
+		<title>GOPRO</title>
 		<meta http-equiv="X-UA-Compatible" content="IE=9"/>
 		<meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
